<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kit_camera_wrapper</name>
  <version>1.0.0</version>
  <description>Camera wrapper package for Kit de Robotica</description>
  <maintainer email="pedrofuoco6@gmail.com">pedro-fuoco</maintainer>
  <license>MIT</license>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
